fix overflow

--- a/style.css
+++ b/style.css
@@ -103,7 +103,9 @@ h1, h2, h3, p{
     line-height: 24px;
     color: var(--black-secondary-color);
 }
-
+section{
+    overflow: hidden;
+}
 /*===========================GENERAL===========================================*/
 
 
